@startuml tiket
skinparam classAttributeIconSize 0

class BioskopApplication {
    + main(args: String[]): void
}

package controller {
    class AuthController {
        - userRepo: UserRepository
        - currentUser: User
        + AuthController(repo: UserRepository)
        + login(username: String, password: String): User
        + logout(): void
        + register(username: String, password: String, saldo: int, role: String): boolean
        + getCurrentUser(): User
        + topUp(jml: int): boolean
    }

    class BookingController {
        - tiketRepo: TiketRepository
        + BookingController(repo: TiketRepository)
        + isSeatAvailable(schedule: Schedule, seat: String): boolean
        + pesanTiket(customer: Customer, schedule: Schedule, seat: String): boolean
        + getTiketByUsername(username: String): List<Tiket>
    }

    class ScheduleController {
        - schRepo: ScheduleRepository
        + ScheduleController(repo: ScheduleRepository)
        + addSchedule(mv: Movie, std: Studio, jamTayang: String): boolean
        + getAllSchedules(): List<Schedule>
        + getAllStudios(): List<Studio>
        + deleteSchedule(namaFilm: String, namaStudio: String, jamTayang: String): boolean
    }

    class MovieController {
        - movieRepo: MovieRepository
        + MovieController(repo: MovieRepository)
        + addFilm(namaFilm: String, durasi: int, genre: String): boolean
        + deleteFilm(namaFilm: String): boolean
        + filterByGenre(genre: String): List<Movie>
        + getAllMovies(): List<Movie>
        + getMovieByName(name: String): Movie
    }

    class CinemaRestController {
        - authController: AuthController
        - movieController: MovieController
        - scheduleController: ScheduleController
        - bookingController: BookingController
        --
        + login(req: LoginReq): ResponseEntity
        + register(req: RegReq): ResponseEntity
        + getMovies(): ResponseEntity
        + addMovie(req: MovieReq): ResponseEntity
        + deleteMovie(namaFilm: String): ResponseEntity
        + getStudios(): ResponseEntity
        + getSchedules(): ResponseEntity
        + addSchedule(req: ScheduleReq): ResponseEntity
        + deleteSchedule(req: ScheduleReq): ResponseEntity
        + createBooking(req: BookingReq): ResponseEntity
        + getUserBookings(username: String): ResponseEntity
        + getAllTickets(): ResponseEntity
        + getAllUsers(): ResponseEntity
        + deleteUser(username: String): ResponseEntity
        + topUpSaldo(req: TopUpReq): ResponseEntity
    }
}

package repository {
    class UserRepository {
        - users: List<User>
        - CSV_PATH: String
        + loadDataCSV(): void
        + saveDataToCSV(): void
        + findByUsername(username: String): User
        + addUser(user: User): void
        + deleteUser(username: String): boolean
        + getAllUsers(): List<User>
    }

    class MovieRepository {
        - movieList: List<Movie>
        - CSV_PATH: String
        + loadDataCSV(): void
        + saveDataToCSV(): void
        + findMovie(namaFilm: String): Movie
        + getAllMovies(): List<Movie>
        + addFilm(mv: Movie): void
        + deleteFilm(mv: Movie): void
    }

    class ScheduleRepository {
        - schedules: List<Schedule>
        - studios: List<Studio>
        - CSV_PATH: String
        + loadDataCSV(): void
        + saveDataToCSV(): void
        + addSchedule(sch: Schedule): void
        + deleteSchedule(sch: Schedule): void
        + getAllSchedule(): List<Schedule>
        + getAllStudios(): List<Studio>
    }

    class TiketRepository {
        - tikets: List<Tiket>
        - CSV_PATH: String
        + loadDataCSV(userRepo, schRepo): void
        + saveDataToCSV(): void
        + addTiket(tiket: Tiket): void
        + getAllTiket(): List<Tiket>
        + findByUsername(username: String): List<Tiket>
    }
}

package model {
    abstract class User {
        - username: String
        - password: String
        - saldo: int
        + User(username, password, saldo)
        + abstract getRole(): String
        + addSaldo(jml: int): void
    }

    class Admin {
        + Admin(username, password, saldo)
        + getRole(): String
    }

    class Customer {
        + Customer(username, password, saldo)
        + getRole(): String
    }

    class Movie {
        - namaFilm: String
        - durasi: int
        - genre: String
        + Movie(namaFilm, durasi, genre)
    }

    class Studio {
        - namaStudio: String
        - kapasitas: int
        - tipeStudio: String
        + Studio(namaStudio, kapasitas, tipeStudio)
    }

    class Schedule {
        - movie: Movie
        - studio: Studio
        - jamTayang: String
        + Schedule(movie, studio, jamTayang)
        + getHarga(): int
    }

    class Tiket {
        - user: User
        - jadwalFilm: Schedule
        - seat: String
        - harga: int
        + Tiket(user, jadwalFilm, seat, harga)
        + printTiket(): void
    }
}

package utils {
    class CSVUtils {
        + static read(path, mapper): List<T>
        + static write(path, list, formatter): void
    }
}

CinemaRestController --> AuthController
CinemaRestController --> MovieController
CinemaRestController --> ScheduleController
CinemaRestController --> BookingController

AuthController --> UserRepository
BookingController --> TiketRepository
ScheduleController --> ScheduleRepository
MovieController --> MovieRepository

UserRepository ..> CSVUtils
MovieRepository ..> CSVUtils
ScheduleRepository ..> CSVUtils
TiketRepository ..> CSVUtils

UserRepository o-- User
TiketRepository o-- Tiket
ScheduleRepository o-- Schedule
ScheduleRepository o-- Studio
MovieRepository o-- Movie

User <|-- Admin
User <|-- Customer

Tiket --> User
Tiket --> Schedule
Schedule --> Movie
Schedule --> Studio

@enduml